--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="game.js" defer type="module"></script>
 </head>
 <body>
     <div id="game-board"></div>
